--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script>window.onload = function(){
   var input = document.getElementById("html-input").value;
-  var win = window.open("", "HTML Viewer");
+  var win = window.open("", "HTML Viewer", "_self");
   win.document.write(input);}</script>
   <form><textarea style="visibility: hidden;" id="html-input" rows="50%" cols="200%">
     <head>
